Code CleanUp